# pyppl_require

./: .pre-commit-config.yaml  .pylintrc  .tagitrc  README.md  README.rst  pyppl_require.py  pyproject.toml  requirements.txt  setup.py  tox.ini
tests/: pipeline.py  procs.py  pyppl  test_require.py
