[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyppl_require"
version = "0.0.1"
description = "Requirement manager for processes of PyPPL"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pyppl_require"
repository = "https://github.com/pwwang/pyppl_require"

[tool.poetry.dependencies]
python = "^3.6"
pyppl = "*"
cmdy = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]
pyppl_require = "pyppl_require:console"
pyppl-require = "pyppl_require:console"

