[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyppl_require"
version = "0.0.4"
description = "Requirement manager for processes of PyPPL"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pyppl_require"
repository = "https://github.com/pwwang/pyppl_require"

[tool.poetry.dependencies]
python = "^3.6"
cmdy = "*"
pyppl = "3.*"
pyppl_annotate = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.plugins.pyppl]
pyppl_require = "pyppl_require"
